fixed flex-wrap issue

--- a/github-clone/styles.css
+++ b/github-clone/styles.css
@@ -91,4 +91,5 @@ p {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    gap: 12px
 }
